src/snapshots/rui__snapshot_tests__snapshot_size_then_offset.snap
---
source: src/snapshot_tests.rs
assertion_line: 185
expression: "layout_snapshot(&ui, [200.0, 200.0])"
---
root_size=[50.0, 50.0]
path=[0, 0, 0] rect=[0.0, 0.0, 50.0, 50.0] offset=[0.0, 0.0]
