src/snapshots/rui__snapshot_tests__snapshot_vlist_of_padded.snap
---
source: src/snapshot_tests.rs
assertion_line: 153
expression: "layout_snapshot(&ui, [200.0, 200.0])"
---
root_size=[90.0, 80.0]
path=[0, 1742378985846435984] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 40.0]
path=[0, 1742378985846435984, 0, 0] rect=[0.0, 0.0, 80.0, 30.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921, 0, 0] rect=[0.0, 0.0, 80.0, 30.0] offset=[0.0, 0.0]
