src/snapshots/rui__snapshot_tests__snapshot_vlist_varying.snap
---
source: src/snapshot_tests.rs
assertion_line: 114
expression: "layout_snapshot(&ui, [200.0, 200.0])"
---
root_size=[50.0, 90.0]
path=[0, 568126464209439262] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 0.0]
path=[0, 568126464209439262, 0] rect=[0.0, 0.0, 50.0, 45.0] offset=[0.0, 0.0]
path=[0, 1742378985846435984] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 75.0]
path=[0, 1742378985846435984, 0] rect=[0.0, 0.0, 50.0, 15.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 45.0]
path=[0, 16336925911988107921, 0] rect=[0.0, 0.0, 50.0, 30.0] offset=[0.0, 0.0]
